--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="">
 
-<head>
+<head prefix="og: https://ogp.me/ns#">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="og:title" content="野菜クイズ">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="野菜の名前が分かるかな？">
+    <meta property="og:url" content="">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@shima_218_dev">
+    <meta property="og:image" content="">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>
         <%= htmlWebpackPlugin.options.title %>
