--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta property="og:title" content="野菜クイズ">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="野菜の名前が分かるかな？">
+    <meta property="og:description" content="QuizKnock好きの個人が作った、QuizKnockとは何の関係もないクイズ">
     <meta property="og:url" content="">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@shima_218_dev">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://quiz-pictures.s3-ap-northeast-1.amazonaws.com/004_01.png">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>
         <%= htmlWebpackPlugin.options.title %>
